# transmission-pusher

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  TEST_SUMMARY.md  dev-requirements.txt  diagnose_connection.py  env.example  pyproject.toml  pytest.ini  requirements.txt  setup.py  transmission_client.py
.github/workflows/: ci.yml
examples/: example_usage.py  run_from_root.py
n8n/: README.md  env.example  install-cli.sh  transmission-cli  transmission-pusher  transmission_standalone.py
scripts/: run_tests.py  setup.sh
src/transmission_pusher/: __init__.py  diagnose_connection.py  transmission_client.py
tests/: test_cli.py  test_diagnose_connection.py  test_transmission_client.py
